--- a/frontend/src/pages/Login/style.css
+++ b/frontend/src/pages/Login/style.css
@@ -17,7 +17,7 @@
 
 .login-container section.form img{
     width: 65%;
-    margin: auto;
+    margin-left: auto;
     margin-right: auto;
     display: block;
 }
